fixed a button and killed the intro text on mobiles

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -13,11 +13,6 @@
     z-index:1;
   }
 
-@media (max-width: 767px) {
-  .cardlayer1, .cardlayer2{
-    display:none;
-  }
-}
 
 
 /* some colours and spacing fixes */
@@ -46,6 +41,13 @@ text-shadow: 0px 4px 3px rgba(0,0,0,0.4), 0px 8px 13px rgba(0,0,0,0.1), 0px 18px
   margin:0 auto;
   padding:10px 0;
 }
+@media (max-width: 300px) {
+  .intro-text{
+    display:none;
+  }
+}
+
+
 .vcenter {
   /*display: inline-block;
   vertical-align: middle;
